clusters/cluster0/kubernetes/apps/matrix/continuwuity/app/continuwuity-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: continuwuity
  name: continuwuity
  namespace: matrix
spec:
  serviceName: continuwuity-service
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: continuwuity
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      enableServiceLinks: false
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - control-01
      containers:
        - image: ghcr.io/continuwuity/continuwuity:main
          imagePullPolicy: Always
          name: continuwuity
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: uwu-port
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 30
          volumeMounts:
          - name: continuwuity-data
            mountPath: /data
          - name: continuwuity-backup
            mountPath: /backup
          resources:
            limits:
              memory: 3Gi
              cpu: "1.5"
            requests:
              memory: 3Gi
              cpu: "1.5"
      dnsPolicy: ClusterFirst
      restartPolicy: Always
  selector:
    matchLabels:
      app: continuwuity
  volumeClaimTemplates:
    - metadata:
        name: continuwuity-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: host-path
        resources:
          requests:
            storage: 100Gi
    - metadata:
        name: continuwuity-backup
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ceph-block
        resources:
          requests:
            storage: 100Gi
