clusters/cluster0/kubernetes/apps/matrix/continuwuity/app/continuwuity-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: continuwuity-service
  namespace: matrix
spec:
  externalTrafficPolicy: Local
  selector:
    app: continuwuity
  ports:
    - name: continuwuity-port
      port: 6167
      protocol: TCP
      targetPort: 6167
