clusters/cluster0/kubernetes/apps/matrix/continuwuity/app/continuwuity-federation-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: continuwuity
  namespace: matrix
spec:
  hostnames:
  - federation.biggs.dog
  parentRefs:
  - name: wildcard-biggs-dog
    namespace: networking
  rules:
  - backendRefs:
    - name: continuwuity-federation-port
      port: 80
