clusters/cluster0/kubernetes/apps/matrix/continuwuity/app/continuwuity-well-known-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: continuwuity
  namespace: matrix
spec:
  hostnames:
  - biggs.dog
  parentRefs:
  - name: wildcard-biggs-dog
    namespace: networking
  rules:
  - backendRefs:
    - name: continuwuity-federation-port
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /.well-known/matrix
