clusters/cluster0/kubernetes/apps/matrix/continuwuity/app/matrix-federation-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: matrix-federation-policy
  namespace: matrix
spec:
  endpointSelector:
    matchLabels:
      app: continuwuity
  egress:
    # 1. Matrix Federation (HTTPS to Internet)
    - toEntities:
        - internet
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
